scrollbar et modal fix

--- a/src/modal/style.scss
+++ b/src/modal/style.scss
@@ -21,6 +21,7 @@
         opacity: 0;
         transform: translateY(0);
         transition: all .2s ease;
+        margin: 0;
         svg {
             font-size: 1.4em;
             margin-right: 10px;
