--- a/src/style.scss
+++ b/src/style.scss
@@ -48,13 +48,14 @@ body {
   
   /* Track */
   ::-webkit-scrollbar-track {
-    background: transparent;
+    background: #f5f5f5;
+    border-radius: 10px;
   }
   
   /* Handle */
   ::-webkit-scrollbar-thumb {
     background: #888;
-    border-radius: var(--rounded);
+    border-radius: 10px;
   }
   
   /* Handle on hover */
